support graal native cli build