@@ -8,6 +8,7 @@ import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.function.Consumer;
@@ -35,7 +36,7 @@ public class NMEAMessageInputStreamReaderTest {
 
     @Test
     public void catchesInvalidMessageExceptionsInList() {
-        List<String> nmeaQueue = new ArrayList<>(List.of(
+        List<String> nmeaQueue = new ArrayList<>(Arrays.asList(
                 "!AIVDM,1,1,,B,402=481uaUcf;OQ55JS9ITi025Jp,0*2B",
                 "!AIVDM,1,1,,B,58LAM242B9POUKWWW<0a>0<4E<58,0*6E",  // invalid
                 "!AIVDM,1,1,,A,33nr7t001f13KNTOahh2@QpF00vh,0*58"
@@ -46,7 +47,7 @@ public class NMEAMessageInputStreamReaderTest {
 
     @Test
     public void catchesInvalidMessageExceptionsInQueue() {
-        List<String> nmeaQueue = new LinkedList<>(List.of(
+        List<String> nmeaQueue = new LinkedList<>(Arrays.asList(
                 "!AIVDM,1,1,,B,402=481uaUcf;OQ55JS9ITi025Jp,0*2B",
                 "!AIVDM,1,1,,B,58LAM242B9POUKWWW<0a>0<4E<58,0*6E",  // invalid
                 "!AIVDM,1,1,,A,33nr7t001f13KNTOahh2@QpF00vh,0*58"
@@ -57,7 +58,7 @@ public class NMEAMessageInputStreamReaderTest {
 
     @Test
     public void nmeaStringPreProcessor() {
-        List<String> nmeaQueue = new LinkedList<>(List.of(
+        List<String> nmeaQueue = new LinkedList<>(Arrays.asList(
                 "02/06/2019 06:00:06 !AIVDM,1,1,,B,13ku8:00240rCk4IV?U`B6b:083V,0*37~03",
                 "02/06/2019 06:00:10 !AIVDM,1,1,,A,15@k;@00100tsKDIjqte=:T>0<16,0*6E~03",
                 "02/06/2019 06:00:13 !AIVDO,1,1,,,15E3lN002g0s0p@Ini0L@qjH0000,0*02~03"
